# simple_auth_server

./: Cargo.toml
src/: lib.rs  main.rs  model.rs  service.rs
src/model/: otp.rs  user.rs
src/repository/: user_repository.rs
src/response/: response.rs
