[package]
name = "simple_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.7.0"
totp-rs = "5.5.1"
base32 = "0.4.0"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.112"
chrono = "0.4.33"
env_logger = "0.11.1"
uuid = "1.7.0"