[package]
name = "simple_auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.7.0"
totp-rs = "5.5.1"
base32 = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.11.1"
uuid = {"version" = "1.7.0", features = ["v4"]}